# mlfts

./: .env.example  .gitignore  CLAUDE.md  DATABRICKS_MLFLOW_UC_SETUP.md  QUICKSTART.md  README.md  README_DATABRICKS_UC.md  config_utils.py  databricks_notebook_setup.py  databricks_tracing_example.py  databricks_uc_setup.sql  filter_traces.py  install-mlflow-skills.sh  main.py  pyproject.toml  setup_databricks_experiment.py  test_discover.py  test_feedback.py  test_setup.py
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: log_cc_environment.py
.claude-plugin/skills/tag-trace/scripts/: trace_annotate.py
.claude/hooks/: log_cc_environment.py  skip_skill_traces.py
.claude/mlflow/: env_8512e411-79f7-4c20-b3c5-6b4a85857f0d.json
.claude/skills/feedback-trace/scripts/: trace_annotate.py
.codex/: config.toml
.cursor/: mcp.json
docs/plans/: 2026-03-03-reproducibility-system-design.md  2026-03-03-reproducibility-system-plan.md
hooks/: log_cc_environment.py  skip_skill_traces.py
mlruns/0/: meta.yaml
mlruns/0/traces/tr-02be351192d82993935ee47a7a852e1b/: trace_info.yaml
mlruns/0/traces/tr-1acf1db042bc4fe84eea0a32c0cbbdaa/: trace_info.yaml
mlruns/0/traces/tr-23ed340cd9d06899712e329f1f629e10/: trace_info.yaml
mlruns/0/traces/tr-2be6e5f07433a881d3a05487328d722b/: trace_info.yaml
mlruns/0/traces/tr-357d2aacb11ff2e157946a0fa3700e24/: trace_info.yaml
plugin-skills/feedback-trace/: SKILL.md
plugin-skills/tag-trace/: SKILL.md
tests/: test_log_cc_environment.py  test_skip_skill_traces.py
(+92 files in other folders)
